--- a/demo/index.html
+++ b/demo/index.html
@@ -25,11 +25,10 @@
 </head>
 <body ng-app="app">
 <div class="container">
-    <h1><a href="https://github.com/JohnnyTheTank/apiNG" target="_blank">apiNG</a> design for <a href="https://github.com/JohnnyTheTank/apiNG-design-bricklayer" target="_blank">angular-bricklayer</a></h1>
     <aping
             model="social"
             order-by="$RANDOM"
-            aping-flickr="[{'tags':'munich'}, {'tags':'food'}]">
+            aping-flickr="[{'tags':'travel'}, {'tags':'health'}]">
     </aping>
 </div>
 
